--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,6 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 1440px;
   min-height: 100%;
   background-color: #ffffff;
 }
@@ -63,6 +62,7 @@ body {
   background-color: #ffe17f;
   color: #000000;
   width: 1160px;
+  z-index: 10;
   margin: 0 auto;
   box-sizing: border-box;
   padding: 19px 60px 0;
@@ -82,6 +82,25 @@ body {
   z-index: 1;
 }
 
+.header-link {
+  display: inline-block;
+}
+
+.header-link:focus {
+  outline: 2px solid #af4fff;
+  color: #000000;
+}
+
+.header-link:hover {
+  color: #000000;
+  opacity: 0.6;
+}
+
+.header-link:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
 .header-menu {
   position: relative;
   z-index: 10;
@@ -93,7 +112,7 @@ body {
 }
 
 .menu-link {
-  font-family: "Rubik";
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: inherit;
   line-height: 30px;
@@ -104,11 +123,25 @@ body {
 
 .login-link {
   position: relative;
-  margin-left: 27px;
+  display: inline-block;
+  padding-left: 27px;
+}
+
+.menu-link:hover {
+  opacity: 0.6;
+}
+
+.menu-link:active {
+  opacity: 0.3;
+}
+
+.menu-link:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 3px 0;
 }
 
 .login-link::after {
-  background-image: url(../images/login-person.svg);
+  background-image: url("../images/login-person.svg");
   width: 13px;
   height: 12px;
   content: "";
@@ -116,20 +149,29 @@ body {
   text-align: center;
   position: absolute;
   top: 10px;
-  right: 67px;
+  left: 0;
   background-position: center;
 }
 
-.menu-user-item {
-  min-width: 105px;
+.user-menu-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  padding-left: 28px;
 }
 
 .menu-link-compare {
   position: relative;
+  display: inline-block;
+  padding-left: 22px;
+  margin-right: 23px;
 }
 
 .menu-link-compare::after {
-  background-image: url(../images/compare.svg);
+  background-image: url("../images/compare.svg");
   width: 10px;
   height: 12px;
   content: "";
@@ -137,21 +179,64 @@ body {
   text-align: center;
   position: absolute;
   top: 10px;
-  right: 67px;
+  left: 0;
   background-position: center;
+}
+
+.menu-link-cart {
+  position: relative;
+  display: inline-block;
+  padding-left: 35px;
+  box-sizing: border-box;
+}
+
+.menu-link-cart::after {
+  background-image: url("../images/cart.svg");
+  width: 16px;
+  height: 14px;
+  content: "";
+  background-repeat: no-repeat;
+  text-align: center;
+  position: absolute;
+  left: 9px;
+  top: 7px;
+  background-position: center;
+  z-index: 1;
+}
+
+.cart-amount {
+  position: absolute;
+  left: -5px;
+  top: 5px;
+  min-width: 21px;
+  height: 21px;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  padding: 0 4px;
+  font-size: 14px;
+  line-height: 17px;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+  border-radius: 10px;
+  z-index: 10;
+  display: flex;
 }
 
 .user-menu {
   display: flex;
   flex-direction: row;
-  padding-top: 5px;
+  padding-top: 21px;
 }
 
 .search {
   display: flex;
   width: 517px;
   height: 40px;
-  font-family: "Rubik";
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -159,7 +244,7 @@ body {
 }
 
 .search-icon {
-  background-image: url(../images/search.svg);
+  background-image: url("../images/search.svg");
   background-repeat: no-repeat;
   background-position: 13px;
 }
@@ -170,24 +255,50 @@ body {
   align-items: center;
   padding: 0 0 0 16px;
   width: 359px;
+  height: 40px;
   padding-left: 46px;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  background-color: #ffe17f;
+}
+
+.search-type-label:focus-within {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
+  position: relative;
+}
+
+.search-type:focus {
+  outline: none;
 }
 
 .search-submit {
   border: 2px solid #000000;
   border-radius: 0 50px 50px 0;
   width: 160px;
+  height: 40px;
   padding-left: 7px;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  background-color: #ffe17f;
+  border-left: none;
+}
+
+.search-submit:hover {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.search-submit:active {
+  background-color: #000000;
+  color: #ffffff;
+  opacity: 0.3;
 }
 
 .menu-login {
@@ -197,21 +308,18 @@ body {
   width: 231px;
 }
 
-.user-menu-list {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin-left: 26px;
-}
-
 .navigation {
   display: flex;
   justify-content: space-between;
-  margin-top: 27px;
+  margin-top: 30px;
+}
+
+.navigation-catalog {
+  position: relative;
 }
 
 .navigation-catalog-title {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
@@ -221,47 +329,101 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.2em;
   position: relative;
+  display: inline-block;
+  padding-right: 67px;
+  min-height: 54px;
+  padding-top: 17px;
+  box-sizing: border-box;
+
 }
 
 .navigation-catalog-title::after {
-  background-image: url(../images/plus.svg);
+  background-image: url("../images/plus.svg");
   border: 2px solid #000000;
-  width: 50px;
-  height: 50px;
+  width: 46px;
+  height: 46px;
   content: "";
   background-repeat: no-repeat;
   border-radius: 100%;
   text-align: center;
   position: absolute;
-  top: -18px;
-  right: -69px;
+  top: 2px;
+  right: 0;
   background-position: center;
+  opacity: 0.3;
+}
+
+.navigation-catalog-title:hover::after {
+  opacity: 1;
+}
+
+.navigation-catalog-title:focus {
+  outline: 2px solid #af4fff;
+  ;
+}
+
+.navigation-catalog-title:focus::after {
+  opacity: 0.3;
+}
+
+.dropdown-menu {
+  width: 1160px;
+  min-height: 180px;
+  margin: 0 auto;
+  padding: 26px 60px 27px;
+  position: absolute;
+  box-sizing: border-box;
+  left: -60px;
+  top: 32px;
+  background-color: #FFE17F;
+  z-index: -1;
+  display: none;
+}
+
+.dropdown-menu-wrapper {
+  list-style: none;
+  display: inline-flex;
+}
+
+.dropdown-menu-wrapper:first-child {
+  width: 222px;
+  margin-right: 26px;
+}
+
+.dropdown-menu-wrapper:nth-child(2),
+.dropdown-menu-wrapper:nth-child(3) {
+  width: 205px;
+  margin-right: 1px;
 }
 
 .dropdown-menu-list {
-  display: none;
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
+.dropdown-menu-item {
+  margin-bottom: 5px;
+}
+
 .dropdown-link {
-  font-family: "Rubik";
-  font-weight: 400;
   font-size: 16px;
   line-height: 18px;
   text-decoration: none;
   color: #000000;
-  background-color: #ffe17f;
+  margin-bottom: 5px;
 }
 
 .navigation-catalog-list {
   list-style: none;
   margin: 0;
+  padding: 0;
+  width: 600px;
   display: flex;
-  justify-content: space-between;
-}
-
-.navigation-catalog-item:not(:last-child) {
-  margin-right: 44px;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  gap: 10px 44px;
+  align-items: center;
 }
 
 .navigation-catalog-item {
@@ -285,10 +447,28 @@ body {
   text-transform: uppercase;
 }
 
+.navigation-catalog-link:hover {
+  opacity: 0.6;
+}
+
+.navigation-catalog-link:active {
+  opacity: 0.3;
+}
+
+.navigation-catalog-link:focus {
+  outline: 2px solid #af4fff;
+  ;
+}
+
 .page-container {
-  width: 1440;
+  width: 1160px;
   margin: 0 auto;
   background-color: #ffffff;
+}
+
+.hero {
+  display: flex;
+  min-height: 560px;
 }
 
 .slider {
@@ -301,6 +481,8 @@ body {
 
 .slider-main {
   display: flex;
+  position: absolute;
+  top: -10px;
 }
 
 .slider-list {
@@ -310,6 +492,27 @@ body {
 
 .slider-item {
   display: none;
+  padding-top: 135px;
+  position: relative;
+}
+
+.slider-item::before {
+  content: "01";
+  position: absolute;
+  background-color: #ffe17f;
+  height: 135px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: #ffffff;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 180px;
+  text-align: right;
+  line-height: 156px;
+  box-sizing: border-box;
+  padding-right: 47px;
 }
 
 .slider-item-active {
@@ -317,9 +520,52 @@ body {
 }
 
 .slider-image {
-  margin: 0;
-  padding: 0 0 13px 0;
+  margin: -5px 0 0 0;
+  padding: 0 0 0 0;
   box-sizing: border-box;
+  position: relative;
+}
+
+.slider-control {
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+}
+
+.slider-control:hover {
+  opacity: 0.6;
+}
+
+.slider-control:active {
+  opacity: 0.3;
+}
+
+.slider-control:focus {
+  outline: 2px solid #7b61ff;
+  outline-offset: 2px;
+}
+
+.slider-prev {
+  position: absolute;
+  top: 206px;
+  left: 30px;
+  content: "";
+  background-image: url(../images/arrow-right.svg);
+  background-repeat: no-repeat;
+  height: 60px;
+  width: 20px;
+  transform: rotate(180deg);
+}
+
+.slider-next {
+  position: absolute;
+  top: 206px;
+  right: 0;
+  content: "";
+  background-image: url(../images/arrow-right.svg);
+  background-repeat: no-repeat;
+  height: 60px;
+  width: 20px;
 }
 
 .slider-item-description {
@@ -338,7 +584,16 @@ body {
 }
 
 .slider-description {
-  margin-top: 31px;
+  margin-top: 28px;
+}
+
+.button-slider {
+  display: inline-block;
+  margin-top: 42px;
+  position: relative;
+  width: 220px;
+  height: 40px;
+  z-index: 1;
 }
 
 .button {
@@ -352,18 +607,13 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
-  position: relative;
-  width: 220px;
-  height: 40px;
-  z-index: 1;
-  margin-top: 41px;
+
 }
 
-
-.button::after {
+.button-slider::after {
   content: "";
   position: absolute;
-  top: 9%;
+  top: 2px;
   left: 0;
   background-color: #ffe17f;
   transform: translateY(50%);
@@ -372,12 +622,27 @@ body {
   z-index: -1;
 }
 
+.button-slider:hover::after {
+  height: 100%;
+  top: -32px;
+}
+
+.button-slider:active::after {
+  height: 100%;
+  top: -32px;
+  background-color: #ffcc33;
+}
+
+.button-slider:focus::after {
+  outline: 2px solid #af4fff;
+  ;
+}
+
 .slider-specification-list {
   list-style: none;
   display: flex;
   margin-top: 42px;
   padding: 0;
-
 }
 
 .slider-specification-item {
@@ -408,19 +673,21 @@ body {
 
 .bullet-container {
   margin: 0 auto;
-  width: 1160px;
   position: relative;
 }
 
 .slider-bullets {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   padding: 0;
+  margin: 0;
   list-style: none;
   position: absolute;
-  bottom: 9px;
-  right: 47%;
+  bottom: 17px;
+  right: 0;
+  width: 1160px;
 }
 
 .bullet {
@@ -429,11 +696,30 @@ body {
   height: 12px;
   margin: 0;
   padding: 0;
+  cursor: pointer;
+}
 
+.bullet-item {
+  display: inline;
 }
 
 .bullet-item:not(:last-child) {
   margin-right: 20px;
+}
+
+.bullet-active:hover,
+.bullet:hover {
+  opacity: 0.6;
+}
+
+.bullet-active:active,
+.bullet:active {
+  opacity: 0.3;
+}
+
+.bullet-item:focus-within {
+  outline: 2px solid #AF4FFF;
+  outline-offset: 2px;
 }
 
 .bullet-active {
@@ -459,18 +745,142 @@ body {
 }
 
 .catalog-sorting-item {
-  width: 160px;
-  height: 253px;
+  display: flex;
+  min-height: 253px;
+  list-style: none;
+
 }
-.catalog-sorting-link {
-  text-decoration: none;
-  font-family: "Raleway",sans-serif;
-  font-style: normal;
+
+.catalog-sorting-title {
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
-  font-size: 18px;
   line-height: 24px;
   letter-spacing: -0.02em;
+  margin-bottom: 12px;
+
+}
+
+.catalog-sorting-link {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  text-decoration: none;
   color: #000000;
+
+}
+
+.delivery {
+  position: relative;
+  width: 1160px;
+  margin: 0 auto;
+  margin-bottom: 142px;
+  display: flex;
+}
+
+.delivery-navigation-container {
+  width: 280px;
+  border-right: 7px solid #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.delivery-navigation-list {
+  margin: 64.5px 0;
+  padding: 0;
+}
+
+.delivery-navigation-item {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.delivery-navigation-item:not(:last-child) {
+  margin-bottom: 35px;
+}
+
+.delivery-uncommon {
+  margin: 0 auto;
+  padding: 0;
+}
+
+.delivery-navigation-link {
+  display: inline-block;
+  position: relative;
+  width: 160px;
+  height: 40px;
+  z-index: 1;
+}
+
+.delivery-navigation-link::after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 0;
+  background-color: #ffe17f;
+  transform: translateY(50%);
+  width: 160px;
+  height: 8px;
+  z-index: -1;
+}
+
+.delivery-slider {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.delivery-slider-title {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  margin: 0;
+  padding-bottom: 34px;
+  color: #000000;
+}
+
+.delivery-slider-item {
+  display: none;
+}
+
+.delivery-slider-item-active {
+  display: block;
+  padding: 94px 259px 56px 77px;
+  background-image: url(../images/deliveryman.svg);
+  background-repeat: no-repeat;
+  background-size: 136px 164px;
+  background-position: 633px;
+}
+.delivery-description {
+  margin: 0;
+  padding: 0;
+}
+
+.uncommon-delivery {
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  color: #000000;
+  text-align: center;
+}
+
+.uncommon-delivery::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  background-color: #ffe17f;
+  background-image: url("../images/car.svg");
+  background-repeat: no-repeat;
 }
 
 .menu-link-cart {
