--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,14 @@ body {
   position: relative;
 }
 
+.navigation-catalog:hover .dropdown-menu {
+  display: flex;
+}
+
+.navigation-catalog:focus-within .dropdown-menu {
+  display: flex;
+}
+
 .navigation-catalog-title {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -378,11 +386,13 @@ body {
   background-color: #FFE17F;
   z-index: -1;
   display: none;
+  flex-wrap: wrap;
 }
 
 .dropdown-menu-wrapper {
   list-style: none;
   display: inline-flex;
+
 }
 
 .dropdown-menu-wrapper:first-child {
@@ -412,6 +422,18 @@ body {
   text-decoration: none;
   color: #000000;
   margin-bottom: 5px;
+}
+
+.dropdown-link:hover {
+  opacity: 0.6;
+}
+
+.dropdown-link:focus {
+  outline: 2px solid #af4fff;
+}
+
+.dropdown-link:active {
+  opacity: 0.3;
 }
 
 .navigation-catalog-list {
@@ -457,7 +479,7 @@ body {
 
 .navigation-catalog-link:focus {
   outline: 2px solid #af4fff;
-  ;
+
 }
 
 .page-container {
@@ -550,7 +572,7 @@ body {
   top: 206px;
   left: 30px;
   content: "";
-  background-image: url(../images/arrow-right.svg);
+  background-image: url("../images/arrow-right.svg");
   background-repeat: no-repeat;
   height: 60px;
   width: 20px;
@@ -589,10 +611,10 @@ body {
 
 .button-slider {
   display: inline-block;
-  margin-top: 42px;
+  margin-top: 33px;
   position: relative;
   width: 220px;
-  height: 40px;
+  min-height: 40px;
   z-index: 1;
 }
 
@@ -607,35 +629,51 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
-
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 6px;
+  position: relative;
+  cursor: pointer;
 }
 
-.button-slider::after {
+.button-text {
+  position: relative;
+  z-index: 10;
+  display: inline-block;
+  padding: 3px 10px;
+}
+
+.button::after {
   content: "";
   position: absolute;
-  top: 2px;
+  top: calc(50% - 5px);
   left: 0;
   background-color: #ffe17f;
-  transform: translateY(50%);
-  width: 220px;
+  /* transform: translateY(50%); */
+  width: 100%;
   height: 8px;
-  z-index: -1;
+  z-index: 1;
 }
 
-.button-slider:hover::after {
+.button:hover::after {
   height: 100%;
-  top: -32px;
+  top: 0;
 }
 
-.button-slider:active::after {
+.button:active::after {
   height: 100%;
-  top: -32px;
+  top: 0;
   background-color: #ffcc33;
 }
 
-.button-slider:focus::after {
+.button-slider:focus {
   outline: 2px solid #af4fff;
   ;
+}
+
+.button-service {
+  min-width: 160px;
+  min-height: 40px;
 }
 
 .slider-specification-list {
@@ -731,7 +769,7 @@ body {
   padding: 0;
   margin: 0 auto;
   width: 1160px;
-  margin-top: 70px;
+  margin-top: 53px;
 }
 
 .catalog-sorting-list {
@@ -748,7 +786,52 @@ body {
   display: flex;
   min-height: 253px;
   list-style: none;
+  position: relative;
+}
 
+.catalog-sorting-item::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 160px;
+  height: 160px;
+  background-color: #ffe17f;
+}
+
+.catalog-sorting-first::after {
+  background-position: center;
+  background-image: url("../images/glasses.svg");
+  background-repeat: no-repeat;
+}
+
+.catalog-sorting-second::after {
+  background-position: center bottom;
+  background-image: url("../images/monopod.svg");
+  background-repeat: no-repeat;
+}
+
+.catalog-sorting-third::after {
+  background-position: center;
+  background-image: url("../images/camera.svg");
+  background-repeat: no-repeat;
+}
+
+.catalog-sorting-fourth::after {
+  background-position: center;
+  background-image: url("../images/bracelet.svg");
+  background-repeat: no-repeat;
+}
+
+.catalog-sorting-fifth::after {
+  background-position: center;
+  background-image: url("../images/watches.svg");
+  background-repeat: no-repeat;
+}
+
+.catalog-sorting-sixth::after {
+  background-position: center;
+  background-image: url("../images/copter-icon.svg");
+  background-repeat: no-repeat;
 }
 
 .catalog-sorting-title {
@@ -769,6 +852,21 @@ body {
 
 }
 
+.catalog-link-container {
+  position: absolute;
+  bottom: 0;
+  min-height: 60px;
+}
+.catalog-sorting-item:hover::after {
+  background-color: #ffc700;
+}
+.catalog-sorting-item:active {
+  opacity: 0.3;
+}
+.catalog-sorting-link:focus{
+  outline: 2px solid #af4fff;
+}
+
 .delivery {
   position: relative;
   width: 1160px;
@@ -784,6 +882,21 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  position: relative;
+  z-index: 15;
+
+}
+
+.delivery::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: -375px;
+  top: 191px;
+  width: 1440px;
+  height: 289px;
+  background-color: #f0f0f0;
+  z-index: -1;
 }
 
 .delivery-navigation-list {
@@ -799,11 +912,6 @@ body {
 
 .delivery-navigation-item:not(:last-child) {
   margin-bottom: 35px;
-}
-
-.delivery-uncommon {
-  margin: 0 auto;
-  padding: 0;
 }
 
 .delivery-navigation-link {
@@ -845,19 +953,121 @@ body {
 
 .delivery-slider-item {
   display: none;
+  padding: 162px 41px 24px 76px;
+  position: relative;
+  width: 600px;
+  box-sizing: border-box;
+  z-index: 10;
 }
 
 .delivery-slider-item-active {
   display: block;
-  padding: 94px 259px 56px 77px;
-  background-image: url(../images/deliveryman.svg);
-  background-repeat: no-repeat;
-  background-size: 136px 164px;
-  background-position: 633px;
 }
+
+.delivery-slider-item::before {
+  content: "";
+  position: absolute;
+  right: -171px;
+  top: 164px;
+  width: 136px;
+  height: 164px;
+  background-size: cover;
+  background-position: 0 0;
+}
+
+.delivery::before {
+  background-image: url("../images/deliveryman.svg");
+}
+
+.guarantee::before {
+  background-image: url("../images/garanty.svg");
+  width: 171px;
+  height: 195px;
+  right: 0;
+  top: 0;
+}
+
+.credit::before {
+  background-image: url("../images/credit.svg");
+  width: 156px;
+  height: 188px;
+  right: 0;
+  top: 0;
+}
+
 .delivery-description {
   margin: 0;
   padding: 0;
+  right: 0;
+  top: 0;
+}
+
+.delivery-uncommon {
+  margin: 0 auto;
+  padding: 0;
+  width: 1160px;
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 70px;
+}
+
+.delivery-uncommon:hover::after {
+  background-color: #ffc700;
+  opacity: 1;
+}
+
+.delivery-uncommon:hover .delivery-button-container::before {
+  opacity: 1;
+}
+
+.delivery-uncommon:active {
+  opacity: 0.3;
+}
+
+.delivery-uncommon:focus {
+  outline: 2px solid #AF4FFF;
+}
+
+.delivery-uncommon::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: #ffe17f;
+  width: 125px;
+  height: 100px;
+  background-image: url("../images/car.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.delivery-button-container::before {
+  content: "i";
+  position: absolute;
+  right: 44px;
+  top: 28px;
+  background-color: #dcdcdc80;
+  background-repeat: no-repeat;
+  border-radius: 100%;
+  color: #000000;
+  opacity: 0.3;
+  width: 40px;
+  height: 40px;
+  padding-top: 5px;
+  box-sizing: border-box;
+}
+
+.delivery-button-container {
+  width: 1160px;
+  text-align: center;
+  min-height: 100px;
+  position: relative;
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
 }
 
 .uncommon-delivery {
@@ -871,16 +1081,248 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
-  text-align: center;
+
 }
 
-.uncommon-delivery::after {
+.information {
+  display: flex;
+  margin: 0 auto;
+  width: 1160px;
+  justify-content: space-between;
+
+}
+
+.information-title {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  margin-bottom: 47px;
+  margin-top: 46px;
+}
+
+.information-about::before {
+  position: absolute;
+  width: 84px;
+  height: 7px;
+  background-color: #000000;
+  content: "";
+}
+
+.information-about {
+  width: 520px;
+  position: relative;
+
+}
+
+.information-contacts {
+  width: 532px;
+  position: relative;
+}
+
+.information-description {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 30px;
+}
+
+.information-list {
+  margin: 0;
+  padding: 0;
+  margin-left: 22px;
+  margin-bottom: 30px;
+}
+
+.information-item::marker {
+  font-size: 1.4em;
+  color: #ffc700;
+}
+
+.information-item {
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  padding-left: 14px;
+  color: #000000;
+}
+
+.information-item:not(:last-child) {
+  margin-bottom: 15px;
+
+}
+
+.button-information {
+  box-sizing: border-box;
+  display: block;
+  width: 270px;
+  height: 40px;
+  text-decoration: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
+}
+
+.button-information::before {
   content: "";
   position: absolute;
+  width: 100%;
+  height: 8px;
+  background-color: #FFE17F;
+  top: 40%;
+  bottom: 40%;
+  left: 0%;
+  z-index: -1;
+
+}
+
+.information-item-title {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 30px;
+  color: #444444;
+  margin-bottom: 16px;
+  margin-top: 0;
+}
+
+.information-list-contacns {
+  list-style: none;
+  padding: 0;
+}
+
+.information-adresse {
+  margin: 0;
+  padding: 0;
+}
+
+.phone-link {
+  color: #444444;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+
+.information-schedule-list {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 32px;
+}
+
+.notification {
+  box-sizing: border-box;
+  width: 1440px;
+  min-height: 421px;
+  background-color: #f0f0f0;
+  margin: 0 auto;
+}
+
+.notification-wrapper {
+  width: 1160px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.notification-wrapper-description {
+  display: flex;
+  padding: 67px 0 0 7px;
+  align-items: end;
+  box-sizing: border-box;
+  margin-bottom: 145px;
+}
+
+.notification-wrapper-form {
+  display: flex;
+}
+
+.notification-title {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  margin: 0;
+  padding: 0;
+  min-width: 348px;
+  margin-right: 254px;
+}
+
+.notification-description {
+  margin: 0;
+  padding: 0;
+  min-width: 560px;
+  box-sizing: border-box;
+}
+
+.notification-wrapper-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.notification-form {
+  display: flex;
+}
+
+.notification-input {
+  width: 557px;
+  height: 55px;
+  background-color: #f0f0f0;
+  border: none;
+  border-bottom: 3px solid #C4C4C4;
+  font-size: inherit;
+  padding-left: 18px;
+  box-sizing: border-box;
+
+}
+
+.submit-description {
+  height: 55px;
+  width: 253px;
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+  display: inline-block;
+  box-sizing: border-box;
+  border: 3px solid #C4C4C4;
+  position: relative;
+  cursor: pointer;
+
+}
+.submit-description::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 5px);
   left: 0;
   background-color: #ffe17f;
-  background-image: url("../images/car.svg");
+  /* transform: translateY(50%); */
+  width: 100%;
+  height: 8px;
+  z-index: 1;
+}
+.notification-comment {
+  align-self: center;
+  position: relative;
+  display: inline-block;
+  max-width: 160px;
+}
+
+.notification-comment::after {
+  position: absolute;
+  content: "";
+  background-image: url("../images/check.svg");
   background-repeat: no-repeat;
+  left: -33px;
+  top: 4px;
+  width: 16px;
+  height: 16px;
 }
 
 .menu-link-cart {
