--- a/styles/styles.css
+++ b/styles/styles.css
@@ -668,7 +668,6 @@ body {
 
 .button-slider:focus {
   outline: 2px solid #af4fff;
-  ;
 }
 
 .button-service {
@@ -787,6 +786,7 @@ body {
   min-height: 253px;
   list-style: none;
   position: relative;
+  cursor: pointer;
 }
 
 .catalog-sorting-item::after {
@@ -849,7 +849,6 @@ body {
   flex-grow: 1;
   text-decoration: none;
   color: #000000;
-
 }
 
 .catalog-link-container {
@@ -857,13 +856,16 @@ body {
   bottom: 0;
   min-height: 60px;
 }
+
 .catalog-sorting-item:hover::after {
   background-color: #ffc700;
 }
+
 .catalog-sorting-item:active {
   opacity: 0.3;
 }
-.catalog-sorting-link:focus{
+
+.catalog-sorting-link:focus {
   outline: 2px solid #af4fff;
 }
 
@@ -1294,8 +1296,23 @@ body {
   border: 3px solid #C4C4C4;
   position: relative;
   cursor: pointer;
-
 }
+
+.submit-description:hover::after {
+  height: 100%;
+  top: 0;
+}
+.submit-description:active::after {
+  height: 100%;
+  top: 0;
+  background-color: #ffcc33;
+}
+
+.submit-description:focus {
+  outline: 2px solid #af4fff;
+}
+
+
 .submit-description::after {
   content: "";
   position: absolute;
@@ -1307,6 +1324,7 @@ body {
   height: 8px;
   z-index: 1;
 }
+
 .notification-comment {
   align-self: center;
   position: relative;
